Seting up JWT with Passport for Login

--- a/src/views/products/carts.handlebars
+++ b/src/views/products/carts.handlebars
@@ -37,4 +37,4 @@
 
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 {{!-- <script src="/socket.io/socket.io.js"></script> --}}
-<script src="./js/cart.js"></script>
+<script src="/js/cart.js"></script>
