Add cart services and controllers

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -14,6 +14,14 @@ body {
     background-attachment: fixed;
 }
 
+.homepage {
+    background: url(https://pbs.twimg.com/media/CywU32jUQAAdebF.jpg:large);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 100vh;
+}
+
 /* MENU ANIMATION */
 a {
     background:
@@ -34,6 +42,7 @@ a {
 
 a:hover {
     background-size: 0 3px, 100% 3px;
+    color: rgb(5, 111, 138);
 }
 
 .container {
@@ -46,14 +55,42 @@ a:hover {
     text-align: center;
     text-decoration: underline;
     margin: 4rem auto;
-    color: snow
+    width: 40vw;
+    color: snow;
+    background: #ffffff33;
+    box-shadow: 0 8px 32px 0 #1f26875e;
+    backdrop-filter: blur( 6px );
+    -webkit-backdrop-filter: blur( 6px );
+    border-radius: 10px;
+    border: 1px solid #ffffff2e;
+}
+
+.title_homepage {
+    font-size: 4rem;
+    text-align: center;
+    text-decoration: underline;
+    margin: 20rem 2rem auto;
+    padding: 1rem;
+    color: snow;
+    background: #ffffff33;
+    box-shadow: 0 8px 32px 0 #1f26875e;
+    backdrop-filter: blur( 6px );
+    -webkit-backdrop-filter: blur( 6px );
+    border-radius: 10px;
+    border: 1px solid #ffffff2e;
 }
 
 .sub_title {
     font-size: 2rem;
     text-align: center;
     margin: 2rem auto;
-    color: darkslategray;
+    color: #cedd73;
+    background: #ffffff33;
+    box-shadow: 0 8px 32px 0 #1f26875e;
+    backdrop-filter: blur( 6px );
+    -webkit-backdrop-filter: blur( 6px );
+    border-radius: 10px;
+    border: 1px solid #ffffff2e;    
 }
 
 #btn_new-product {
