--- a/src/views/users/account.handlebars
+++ b/src/views/users/account.handlebars
@@ -10,9 +10,10 @@
                         </div>
                         <div class="col-md-6">
                             <div class="card-body">
-                                <h3 class="card-title m-5">Welcome Admin, {{user.first_name}} {{user.last_name}} !</h3>
-                                <h4 class="card-text mb-5">Here's your info.</h4>
-                                <p class="card-text mb-5">E-mail: <i>{{user.email}}</i></p>
+                                <h3 class="card-title mt-5">Welcome, {{user.first_name}} {{user.last_name}} !</h3>
+                                <h5 class="card-title mb-5">It's nice to see an admin arround. 😁</h5>
+                                <h4 class="card-text mb-3">Here's your info.</h4>
+                                <p class="card-text mb-3">E-mail: <i>{{user.email}}</i></p>
                                 <p class="card-text mb-5"><small class="text-muted">Your rol: {{user.rol}}.</small></p>
                                 <a href="/products/addNew">Add New Product</a>
                             </div>
@@ -32,8 +33,8 @@
                         <div class="col-md-6">
                             <div class="card-body">
                                 <h3 class="card-title m-5">Hi, {{user.first_name}} {{user.last_name}} !</h3>
-                                <h4 class="card-text mb-5">Here's your info.</h4>
-                                <p class="card-text mb-5">E-mail: <i>{{user.email}}</i></p>
+                                <h4 class="card-text mb-3">Here's your info.</h4>
+                                <p class="card-text mb-3">E-mail: <i>{{user.email}}</i></p>
                                 <p class="card-text mb-5"><small class="text-muted">Your rol: {{user.rol}}.</small></p>
                             </div>
                         </div>
