--- a/src/views/users/register.handlebars
+++ b/src/views/users/register.handlebars
@@ -1,6 +1,6 @@
 <section class="container">
     
-    <form method="POST" action="/sessions/register" class="form_login">
+    <form method="POST" action="/users/register" class="form_login">
 
         <h2>New Account</h2>
         <div class="row m-3">
