--- a/src/views/errors/general.handlebars
+++ b/src/views/errors/general.handlebars
@@ -1,3 +1,3 @@
 <section class="container">
-    <h2 class="title">ERROR: {{ error }}</h2>
+    <h2 class="title m-5">ERROR: {{ error }}</h2>
 </section>
