--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -14,31 +14,34 @@
         <header>
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/products">HOME!</a>
+                    <a class="navbar-brand" href="/home">HOME!</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        {{#if user}}
+                        <ul class="navbar-nav">
+                                <li class="nav-item nav-link">
+                                    <a href="/products">Products</a>
+                                </li>
+                            {{#if user}}
+                                <li class="nav-item nav-link">
+                                    <a href="/users/account">My Account</a>
+                                </li>
+                                <li class="nav-item nav-link">
+                                    <a href="/users/logout">Logout</a>
+                                </li>
+                            {{else}}
+                                <li class="nav-item nav-link">
+                                    <a href="/users/login">Login</a>
+                                </li>
+                                <li class="nav-item nav-link">
+                                    <a href="/users/register">Register</a>
+                                </li>
+                            {{/if}}
                             <li class="nav-item nav-link">
-                                <a href="/sessions/account">My Account</a>
+                                <a href="/carts/63c84b48eb6eb52c6f70e1eb">Cart</a>
                             </li>
-                            <li class="nav-item nav-link">
-                                <a href="/sessions/logout">Logout</a>
-                            </li>
-                        {{else}}
-                            <li class="nav-item nav-link">
-                                <a href="/sessions/login">Login</a>
-                            </li>
-                            <li class="nav-item nav-link">
-                                <a href="/sessions/register">Register</a>
-                            </li>
-                        {{/if}}
-                        <li class="nav-item nav-link">
-                            <a href="/carts/63c84b48eb6eb52c6f70e1eb">Cart</a>
-                        </li>
-                    </ul>
+                        </ul>
                     </div>
                 </div>
             </nav>
@@ -49,3 +52,4 @@
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </html>
+<script src="/js/index.js"></script>
